работает слайдер, скролл

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
     </section>
     <!-- /.company -->
     
-    <section class="need section" >
-        <div class="container" id="form">
+    <section class="need section" id="form">
+        <div class="container">
             <div class="need-block">
                 <div class="need-block-content">
                     <div class="need-info">
